editor-components/social/social3/social3.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
  .max-content {
    display: flex;
    flex-direction: column;
    gap: var(--composer-gap-lg);

    .upper-container {

      .title,
      .subtitle,
      .description {
        content: "";
      }

      .button-container {
        display: flex;
        gap: var(--composer-gap-sm);
        flex-wrap: wrap;

        .button-wrapper {
          .button {

            .button-text,
            .button-icon {
              width: 1.25rem;
              height: 1.25rem;
              object-fit: contain;

              &.is-icon {
                width: auto;
                height: auto;
                font-size: 1.25rem;
              }
            }
          }
        }
      }
    }

    .post-container {
      display: flex;
      flex-direction: column;
      gap: var(--composer-gap-md);

      .upper-section {
        display: flex;
        gap: var(--composer-gap-md);
        align-items: stretch;

        .profile-media {
          width: 50px;
          height: 50px;
          min-width: 50px;
          min-height: 50px;
          border-radius: 50%;
          object-fit: cover;
          display: flex;
          align-items: center;
          justify-content: center;
          overflow: hidden;
          color: var(--composer-font-color-primary);

          &.is-icon {
            font-size: var(--composer-gap-xl);
          }
        }

        .right-container {
          flex: 1;
          display: flex;
          flex-direction: column;
          gap: var(--composer-gap-xs);

          .user-name {
            height: 100%;
            color: var(--composer-font-color-primary);
            font-size: 2rem;
          }

          .date-container {
            height: 100%;
            display: flex;
            gap: var(--composer-gap-sm);
            align-items: center;

            .date {
              font-size: 1rem;
              color: var(--composer-tertiary-color);
            }

            .date-icon {
              width: 1rem;
              height: 1rem;
              object-fit: contain;
              color: var(--composer-font-color-primary);

              &.is-icon {
                width: auto;
                height: auto;
                font-size: 1rem;
              }
            }
          }
        }
      }

      .post-title {
        font-size: 1.5rem;
        color: var(--composer-font-color-primary);
      }

      .post-description {
        font-size: 1rem;
        color: var(--composer-font-color-primary);
        opacity: 0.5;
      }

      .post-image-container {
        position: relative;
        width: 100%;
        overflow: hidden;
        border-radius: var(--composer-border-radius-sm);

        .post-image {
          width: 100%;
          height: 500px;
          object-fit: cover;
          display: block;
          border-radius: inherit;
        }

        .overlay-item {
          position: absolute;
          inset: 0;
          background-color: var(--composer-overlay-color);
          pointer-events: none;
        }
      }

      .interactions-container {
        display: flex;
        gap: var(--composer-gap-md);

        .interaction {
          display: flex;
          gap: var(--composer-gap-xs);
          color: var(--composer-font-color-primary);
          align-items: center;
          position: relative;
          padding-top: var(--composer-gap-xs);
          cursor: pointer;

          &.share {
            .socials {
              position: absolute;
              display: none;
              bottom: var(--composer-gap-md);
              left: 0px;
              flex-direction: column;
              gap: var(--composer-gap-md);
              border: 1px solid var(--composer-tertiary-color);
              border-radius: var(--composer-border-radius-md);
              padding: var(--composer-gap-md);
              background-color: var(--composer-html-background);
              z-index: 2;

              .social {
                display: flex;
                gap: var(--composer-gap-sm);
                color: var(--composer-font-color-primary);
                font-size: 1rem;

                .social-text {
                  position: relative;

                  &::after {
                    content: "";
                    position: absolute;
                    height: 1px;
                    width: 0px;
                    bottom: 0px;
                    left: 0px;
                    background-color: var(--composer-tertiary-color);
                    transition: all 0.5s ease;
                  }

                  &:hover {
                    &::after {
                      width: 100%;
                    }
                  }
                }

                .social-icon {
                  width: 1.25rem;
                  height: 1.25rem;
                  object-fit: contain;

                  &.is-icon {
                    width: auto;
                    height: auto;
                    font-size: 1.25rem;
                  }
                }
              }

              &:hover {
                display: flex;
              }
            }

            &:hover {
              .socials {
                display: flex;
              }
            }
          }

          .icon {
            width: 1.25rem;
            height: 1.25rem;
            object-fit: contain;

            &.is-icon {
              width: auto;
              height: auto;
              font-size: 1.25rem;
            }

            &.liked {
              fill: var(--composer-primary-color);
              color: var(--composer-primary-color);
            }
          }

          .text {
            font-size: 1rem;
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    .max-content {
      gap: var(--composer-gap-md);

      .post-container {
        gap: var(--composer-gap-sm);
      }
    }
  }
}

