fix(social3): resolve button layout overflow when adding text

--- a/editor-components/social/social3/social3.module.scss
+++ b/editor-components/social/social3/social3.module.scss
@@ -21,8 +21,10 @@
 
         .button-wrapper {
           .button {
+            .button-text {
+              content: "";
+            }
 
-            .button-text,
             .button-icon {
               width: 1.25rem;
               height: 1.25rem;
